# Breakout

./: CMakeLists.txt  README.md
include/glad/: glad.h
res/levels/: Level1.csv  Level2.csv
src/: Config.h  Constants.h  Game.h  Logs.h  ResourceManager.h  config.cpp  game.cpp  main.cpp  resourceManager.cpp
src/entity/: Brick.h  Entity.h  Structures.h  brick.cpp  entity.cpp
src/objects/: Level.h  level.cpp
src/util/: Shader.h  Texture.h  shader.cpp  texture.cpp
